--- a/packages/extra/seaweedfs/templates/dashboard-resourcemap.yaml
+++ b/packages/extra/seaweedfs/templates/dashboard-resourcemap.yaml
@@ -6,26 +6,9 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - services
+  - secrets
   resourceNames:
-  - {{ $.Release.Name }}-s3
-  verbs: ["get", "list", "watch"]
-- apiGroups:
-  - networking.k8s.io
-  resources:
-  - ingresses
-  resourceNames:
-  - ingress-{{ $.Release.Name }}-s3
-  verbs: ["get", "list", "watch"]
-- apiGroups:
-  - cozystack.io
-  resources:
-  - workloadmonitors
-  resourceNames:
-  - {{ $.Release.Name }}-master
-  - {{ $.Release.Name }}-filer
-  - {{ $.Release.Name }}-volume
-  - {{ $.Release.Name }}-db
+  - {{ .Release.Namespace }}-seaweedfs-objectstorage-provisioner
   verbs: ["get", "list", "watch"]
 ---
 kind: RoleBinding
