[lb] enable nodeports for services
Signed-off-by: IvanHunters <xorokhotnikov@gmail.com>

--- a/packages/apps/postgres/templates/external-svc.yaml
+++ b/packages/apps/postgres/templates/external-svc.yaml
@@ -7,7 +7,7 @@ spec:
   type: {{ ternary "LoadBalancer" "ClusterIP" .Values.external }}
   {{- if .Values.external }}
   externalTrafficPolicy: Local
-  allocateLoadBalancerNodePorts: false
+  allocateLoadBalancerNodePorts: true
   {{- end }}
   ports:
   - name: postgres
