--- a/packages/system/objectstorage-controller/values.yaml
+++ b/packages/system/objectstorage-controller/values.yaml
@@ -1,3 +1,3 @@
 objectstorage:
   controller:
-    image: ""
+    image: "ghcr.io/cozystack/cozystack/objectstorage-controller:latest@sha256:2fe77880b81b0210273c85a142cb13e6857d13dd941337456b426597f5778bc3"
