--- a/packages/system/dashboard/templates/incloud-web-gatekeeper.yaml
+++ b/packages/system/dashboard/templates/incloud-web-gatekeeper.yaml
@@ -1,15 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations: {}
-  labels:
-    app.kubernetes.io/instance: incloud-web
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: gatekeeper
-    app.kubernetes.io/version: 1.16.0
-    helm.sh/chart: appSpec-0.1.0
   name: incloud-web-gatekeeper
   namespace: incloud-web
+  labels:
+    app.kubernetes.io/instance: incloud-web
+    app.kubernetes.io/name: gatekeeper
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/version: 7.7.1
+    helm.sh/chart: appSpec-0.1.0
 spec:
   replicas: 1
   selector:
@@ -17,21 +16,22 @@ spec:
       app.kubernetes.io/instance: incloud-web
       app.kubernetes.io/name: gatekeeper
   strategy:
+    type: RollingUpdate
     rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
-      annotations: null
       labels:
         app.kubernetes.io/instance: incloud-web
         app.kubernetes.io/name: gatekeeper
     spec:
+      serviceAccountName: incloud-web-gatekeeper
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
+            - weight: 100
+              podAffinityTerm:
                 labelSelector:
                   matchExpressions:
                     - key: app.kubernetes.io/name
@@ -43,82 +43,75 @@ spec:
                       values:
                         - incloud-web
                 topologyKey: kubernetes.io/hostname
-              weight: 100
+      dnsPolicy: ClusterFirst
+      enableServiceLinks: false
+      restartPolicy: Always
+      priorityClassName: system-cluster-critical
       containers:
-        - args:
-            - --client-id=dashboard
-            - --client-secret=5XaRqvm8k5QHHhgNWJ8odFACquowgZ8e
-            - --discovery-url=https://keycloak.dev5.infra.aenix.org/realms/cozy
-            - --enable-refresh-tokens=true
-            - --encryption-key=5XaRqvm8k5QHHhgNWJ8odFACquowgZ8e
-            - --listen=0.0.0.0:8000
-            - --redirection-url=https://dashboard.dev5.infra.aenix.org
-            - --resources=uri=/*
-            - --scopes=openid profile email groups offline_access
-            - --server-write-timeout=30s
-            - --skip-openid-provider-tls-verify=true
-            - --upstream-response-header-timeout=30s
-            - --upstream-url=http://incloud-web-nginx.incloud-web.svc:8080
-          image: dmkolbin/gatekeeper:0.2.0
+        - name: auth-proxy
+          image: docker.io/bitnami/oauth2-proxy:7.7.1-debian-12-r1
           imagePullPolicy: IfNotPresent
-          #livenessProbe:
-          #  failureThreshold: 3
-          #  httpGet:
-          #    path: /oauth/healthcheck
-          #    port: 8000
-          #    scheme: HTTP
-          #  initialDelaySeconds: 3
-          #  periodSeconds: 10
-          #  successThreshold: 1
-          #  timeoutSeconds: 2
-          name: gatekeeper
+          args:
+            - --provider=oidc
+            - --upstream=http://incloud-web-nginx.incloud-web.svc:8080
+            - --http-address=0.0.0.0:8000
+            - --redirect-url=https://dashboard.dev5.infra.aenix.org/oauth2/callback
+            - --oidc-issuer-url=https://keycloak.dev5.infra.aenix.org/realms/cozy
+            - --email-domain=*
+            - --pass-access-token=true
+            - --pass-authorization-header=true
+            - --cookie-refresh=1h
+            - --cookie-secure=true
+            - --cookie-secret=$(OAUTH2_PROXY_COOKIE_SECRET)
+          env:
+            - name: OAUTH2_PROXY_CLIENT_ID
+              value: dashboard
+            - name: OAUTH2_PROXY_CLIENT_SECRET
+              value: 5XaRqvm8k5QHHhgNWJ8odFACquowgZ8e
+            - name: OAUTH2_PROXY_COOKIE_SECRET
+              value: 82Cm0C3vMWtdqs9T
           ports:
-            - containerPort: 8000
-              name: ingress
+            - name: proxy
+              containerPort: 8000
               protocol: TCP
-          #readinessProbe:
-          #  failureThreshold: 3
-          #  httpGet:
-          #    path: /oauth/healthcheck
-          #    port: 8000
-          #    scheme: HTTP
-          #  initialDelaySeconds: 3
-          #  periodSeconds: 10
-          #  successThreshold: 1
-          #  timeoutSeconds: 2
+          livenessProbe:
+            httpGet:
+              path: /ping
+              port: proxy
+              scheme: HTTP
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 2
+            successThreshold: 1
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /ping
+              port: proxy
+              scheme: HTTP
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 2
+            successThreshold: 1
+            failureThreshold: 3
           resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+              ephemeral-storage: 50Mi
             limits:
               cpu: 200m
               memory: 256Mi
-            requests:
-              cpu: 100m
-              ephemeral-storage: 50Mi
-              memory: 128Mi
           securityContext:
+            runAsNonRoot: true
+            runAsUser: 1001
+            runAsGroup: 1001
             allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
             capabilities:
               drop:
                 - ALL
-            privileged: false
-            readOnlyRootFilesystem: true
-            runAsGroup: 65532
-            runAsNonRoot: true
-            runAsUser: 65532
             seccompProfile:
               type: RuntimeDefault
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          volumeMounts: null
-      dnsPolicy: ClusterFirst
-      enableServiceLinks: false
-      hostIPC: false
-      hostNetwork: false
-      hostPID: false
-      preemptionPolicy: null
-      priorityClassName: system-cluster-critical
-      restartPolicy: Always
-      runtimeClassName: null
-      schedulerName: default-scheduler
-      serviceAccountName: incloud-web-gatekeeper
-      terminationGracePeriodSeconds: 30
-      volumes: null
