--- a/packages/apps/kubernetes/templates/helmreleases/csi.yaml
+++ b/packages/apps/kubernetes/templates/helmreleases/csi.yaml
@@ -35,7 +35,7 @@ spec:
     storageClass: "{{ . }}"
   {{- end }}
   dependsOn:
-  - name: {{ .Release.Name }}-volumesnapshot-crd-for-tenant-k8s
+  - name: {{ .Release.Name }}-vsnap-crd
     namespace: {{ .Release.Namespace }}
   {{- if lookup "helm.toolkit.fluxcd.io/v2" "HelmRelease" .Release.Namespace .Release.Name }}
   - name: {{ .Release.Name }}
