--- a/packages/system/dashboard-config/templates/monitorings.yaml
+++ b/packages/system/dashboard-config/templates/monitorings.yaml
@@ -273,4 +273,15 @@ spec:
 
           - key: yaml
             label: YAML
-            children: Content of Tab Pane 2
+            children:
+            - type: YamlEditorSingleton
+              data:
+                id: 999999999
+                cluster: "{2}"
+                isNameSpaced: true
+                type: "apis"
+                typeName: monitorings
+                apiGroup: apps.cozystack.io
+                apiVersion: v1alpha1
+                prefillValuesRequestIndex: 0
+                substractHeight: 400
