--- a/packages/apps/mysql/Makefile
+++ b/packages/apps/mysql/Makefile
@@ -1,12 +1,10 @@
 MARIADB_BACKUP_TAG = $(shell awk '$$1 == "version:" {print $$2}' Chart.yaml)
-PRESET_ENUM := ["nano","micro","small","medium","large","xlarge","2xlarge"]
 
 include ../../../scripts/common-envs.mk
 include ../../../scripts/package.mk
 
 generate:
-	readme-generator-for-helm -v values.yaml -s values.schema.json -r README.md
-	yq -i -o json --indent 4 '.properties.resourcesPreset.enum = $(PRESET_ENUM)' values.schema.json
+	cozyvalues-gen -v values.yaml -s values.schema.json -r README.md
 
 image:
 	docker buildx build images/mariadb-backup \
