--- a/packages/apps/vm-disk/values.yaml
+++ b/packages/apps/vm-disk/values.yaml
@@ -1,15 +1,19 @@
 ## @section Common parameters
 
-## @param source The source image location used to create a disk
+## @param source {source} The source image location used to create a disk
+## @field source.image {*string} Use image by name: uploaded as "golden image" or from the list: `ubuntu`, `fedora`, `cirros`, `alpine`, and `talos`.
 ## Example using golden image:
 ## source:
 ##   image:
 ##     name: ubuntu
 ##
+## @field source.upload {*string} Upload local image
 ## Example upload local image:
 ## source:
 ##   upload: {}
 ##
+## @field source.http {*string} Download image from an HTTP source
+## @field source.http.url {*string} URL to download the image
 ## Example download image from http source:
 ## source:
 ##   http:
@@ -24,10 +28,10 @@
 
 source: {}
 
-## @param optical Defines is disk should be considered as optical
+## @param optical {bool} Defines if disk should be considered optical
 optical: false
 
-## @param storage The size of the disk allocated for the virtual machine
-## @param storageClass StorageClass used to store the data
+## @param storage {quantity} The size of the disk allocated for the virtual machine
+## @param storageClass {string} StorageClass used to store the data
 storage: 5Gi
 storageClass: replicated
