--- a/packages/extra/info/Makefile
+++ b/packages/extra/info/Makefile
@@ -3,4 +3,5 @@ NAME=etcd
 include ../../../scripts/package.mk
 
 generate:
-	readme-generator-for-helm -v values.yaml -s values.schema.json -r README.md
+	cozyvalues-gen -v values.yaml -s values.schema.json -r README.md
+	yq -o json -i '.properties = {}' values.schema.json
