--- a/packages/system/dashboard/templates/incloud-web-gatekeeper.yaml
+++ b/packages/system/dashboard/templates/incloud-web-gatekeeper.yaml
@@ -61,6 +61,7 @@ spec:
             - --pass-access-token=true
             - --pass-authorization-header=true
             - --cookie-refresh=1h
+            - --cookie-name=kc-access
             - --cookie-secure=true
             - --cookie-secret=$(OAUTH2_PROXY_COOKIE_SECRET)
           env:
