--- a/packages/system/dashboard/templates/incloud-web-web.yaml
+++ b/packages/system/dashboard/templates/incloud-web-web.yaml
@@ -123,7 +123,7 @@ spec:
             - name: MARKETPLACE_VERSION
               value: v1alpha1
             - name: NAVIGATE_FROM_CLUSTERLIST
-              value: /openapi-ui/~recordValue~/api-table/apps.cozystack.io/v1alpha1/tenantnamespaces
+              value: /openapi-ui/~recordValue~/api-table/core.cozystack.io/v1alpha1/tenantnamespaces
             - name: PROJECTS_API_GROUP
               value: in-cloud.io
             - name: PROJECTS_RESOURCE_NAME
