fix oidc and tenant-selector
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>
Signed-off-by: kklinch0 <kklinch0@gmail.com>

--- a/packages/system/dashboard/templates/incloud-web-gatekeeper.yaml
+++ b/packages/system/dashboard/templates/incloud-web-gatekeeper.yaml
@@ -60,7 +60,7 @@ spec:
             - --email-domain=*
             - --pass-access-token=true
             - --pass-authorization-header=true
-            - --cookie-refresh=1h
+            - --cookie-refresh=3m
             - --cookie-name=kc-access
             - --cookie-secure=true
             - --cookie-secret=$(OAUTH2_PROXY_COOKIE_SECRET)
